# Bloomberg-Style_Financial_Terminal

./: .env.example  .gitattributes  .gitignore  .graphifyignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-staging.yml
apps/web/: .eslintrc.js  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/e2e/specs/: chart-panel.spec.ts  workspace.spec.ts
apps/web/src/: index.css  main.tsx  router.tsx  test-setup.ts
apps/web/src/hooks/: use-instruments.ts  use-realtime-price.ts
apps/web/src/lib/: format.test.ts  format.ts
apps/web/src/panels/: index.ts
apps/web/src/routes/: __root.test.tsx  __root.tsx  index.test.tsx  index.tsx
apps/web/src/workspace/: WorkspaceShell.test.tsx  WorkspaceShell.tsx  constants.ts  default-layouts.ts  index.ts  layout-serializer.test.ts  layout-serializer.ts  panel-host.test.tsx  panel-host.tsx  panel-registry.test.ts  panel-registry.ts  types.ts  workspace-api-ref.test.ts  workspace-api-ref.ts  workspace.store.test.ts
docs/architecture/decisions/: ADR-001-tech-stack.md  ADR-002-clickhouse-for-ohlcv.md  ADR-003-split-ws-gateway.md  ADR-004-local-dev-tls.md  ADR-005-free-only-data-sources.md  ADR-006-mock-data-layer.md  ADR-009-filings-cache-no-persistence.md  ADR-010-visual-design-tokens.md
docs/integration-clients/: README.md  coingecko.md  edgar.md  finnhub.md  fred.md  newsapi.md  yfinance.md
docs/repositories/: macro-repository.md
docs/runbooks/: adding-data-source.md  adding-ui-panel.md  plugin-development.md  testing-with-mock-data.md
infrastructure/: docker-compose.yml
infrastructure/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  Dockerfile.ws-gateway
infrastructure/init/clickhouse/: 01_create_ohlcv.sql  02_create_macro_series.sql
infrastructure/init/postgres/: 01_create_instruments.sql
mock_data/: instruments.json  quotes.json
mock_data/filings/: AAPL.json  ABBV.json  ADBE.json  AMD.json  AMZN.json  AVGO.json  BAC.json  COST.json  CRM.json  CVX.json  DIS.json  GOOGL.json  HD.json  JNJ.json  JPM.json  KO.json  LLY.json  MA.json  META.json  MRK.json  MSFT.json  NFLX.json  NVDA.json  PEP.json  PG.json  TSLA.json  UNH.json  V.json  WMT.json  XOM.json
mock_data/macro/: CPIAUCSL.json  DGS10.json  FEDFUNDS.json  GDP.json  UNRATE.json
mock_data/news/: AAPL.json  ABBV.json  ADA.json  ADBE.json  AMD.json  AMZN.json  APT.json  ARB.json  ATOM.json  AVAX.json  AVGO.json  BAC.json  BCH.json  BNB.json  BTC.json  COST.json  CRM.json  CVX.json  DIS.json  DOGE.json  DOT.json  ETH.json  GOOGL.json  HD.json  ICP.json  JNJ.json  JPM.json  KO.json  LINK.json  LLY.json  LTC.json  MA.json  MATIC.json  META.json  MRK.json  MSFT.json  NEAR.json  NFLX.json  NVDA.json  PEP.json  (+11 more)
mock_data/ohlcv/: AAPL_1D.json  ABBV_1D.json  ADA_1D.json  ADBE_1D.json  AMD_1D.json  AMZN_1D.json  APT_1D.json  ARB_1D.json  ATOM_1D.json  AVAX_1D.json  AVGO_1D.json  BAC_1D.json  BCH_1D.json  BNB_1D.json  BTC_1D.json  COST_1D.json  CRM_1D.json  CVX_1D.json  DIS_1D.json  DOGE_1D.json  DOT_1D.json  ETH_1D.json  GOOGL_1D.json  HD_1D.json  ICP_1D.json  JNJ_1D.json  JPM_1D.json  KO_1D.json  LINK_1D.json  LLY_1D.json  LTC_1D.json  MATIC_1D.json  MA_1D.json  META_1D.json  MRK_1D.json  MSFT_1D.json  NEAR_1D.json  NFLX_1D.json  NVDA_1D.json  PEP_1D.json  (+10 more)
scripts/: check-adr-required.sh  check-hardcoding.sh  check-port-registry.sh  generate_mock_data.py
services/api/: pyproject.toml
services/api/src/: config.py  main.py
services/api/src/cache/: keys.py
services/api/src/db/: __init__.py  clickhouse.py  postgres.py  redis.py
services/api/src/integrations/: base.py  coingecko.py  edgar.py  finnhub.py  fred.py  mock_loader.py  newsapi.py  yfinance.py
services/api/src/middleware/: request_id.py
services/api/src/models/ch/: macro.py
services/api/src/models/pg/: instrument.py
services/api/src/repositories/: instrument_repository.py  macro_repository.py  ohlcv_repository.py
services/api/src/routers/: alerts.py  filings.py  fundamentals.py  instruments.py  macro.py  market_data.py  news.py  portfolios.py  screener.py  search.py  users.py  watchlists.py
services/api/src/schemas/: filings.py  instruments.py  macro.py  market_data.py  news.py
services/api/src/services/: filings_service.py  instrument_service.py  macro_service.py  market_data_service.py  news_service.py
services/api/tests/: conftest.py  test_cache_keys.py  test_routers.py  test_settings.py
services/api/tests/integration/: test_market_data_endpoints.py  test_phase2_endpoints.py
services/api/tests/unit/: test_coingecko_integration.py  test_edgar_integration.py  test_filings_service.py  test_finnhub_integration.py  test_fred_integration.py  test_macro_repository.py  test_macro_service.py  test_market_data_service.py  test_mock_loader.py  test_models.py  test_news_service.py  test_newsapi_integration.py  test_repositories.py  test_yfinance_integration.py
services/worker/: pyproject.toml
services/worker/src/: celery_app.py  config.py
services/worker/src/cache/: keys.py
services/worker/src/integrations/: base.py  coingecko.py  fred.py  mock_loader.py  yfinance.py
services/worker/src/models/: instrument.py  ohlcv.py
services/worker/src/repositories/: instrument_repository.py  macro_repository.py  ohlcv_repository.py
services/worker/src/tasks/: alert_evaluator.py  edgar_ingest.py  fred_ingest.py  ingest_ohlcv_coingecko.py  ingest_ohlcv_yfinance.py  market_data_ingest.py  news_ingest.py  types.py
services/worker/tests/: conftest.py  test_celery_app.py
services/worker/tests/unit/: test_cache_keys.py  test_coingecko_integration.py  test_fred_ingest_task.py  test_models.py  test_repositories.py
services/ws-gateway/: package.json  tsconfig.json
services/ws-gateway/src/: config.ts  redis-fanout.ts  server.ts  subscription-manager.test.ts  subscription-manager.ts
services/ws-gateway/src/providers/: binance.test.ts  binance.ts  finnhub.ts
(+60 files in other folders)
