[build-system]
# hatchling >= 1.21.0 required for prepare_metadata_for_build_editable support
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicitly declare the package root — hatchling cannot auto-discover a bare src/ layout
packages = ["src"]

[project]
name = "terminal-api"
version = "0.0.1"
description = "Bloomberg Terminal — FastAPI REST API service"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Data validation — Pydantic v2 with Rust backend
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Database — PostgreSQL (async)
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Database — ClickHouse
    "clickhouse-driver>=0.2.7",
    "clickhouse-connect>=0.7.0",
    # Cache — Redis
    "redis[hiredis]>=5.0.0",
    # HTTP client — async external API calls
    "httpx>=0.27.0",
    # Auth — PyJWT replaces python-jose (which has CVEs GHSA-cjwg-qfpm-7377 and others)
    "PyJWT[crypto]>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    # >=0.0.18 required: CVE-2024-47874 DoS in earlier versions
    "python-multipart>=0.0.18",
    # Utilities
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "orjson>=3.10.0",    # Faster JSON serialization
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    # Linting + formatting
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.9.0",
    # Type stubs
    "types-python-dateutil",
    "types-pytz",
    "types-passlib",
    "sqlalchemy[mypy]",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "alembic/*"]
