[build-system]
# hatchling >= 1.21.0 required for prepare_metadata_for_build_editable support
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicitly declare the package root — hatchling cannot auto-discover a bare src/ layout
packages = ["src"]

[project]
name = "terminal-api"
version = "0.0.1"
description = "Bloomberg Terminal — FastAPI REST API service"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Data validation — Pydantic v2 with Rust backend
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Database — PostgreSQL (async)
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Database — ClickHouse
    "clickhouse-driver>=0.2.7",
    "clickhouse-connect>=0.7.0",
    # Cache — Redis
    "redis[hiredis]>=5.0.0",
    # HTTP client — async external API calls
    "httpx>=0.27.0",
    # Auth — PyJWT replaces python-jose (which has CVEs GHSA-cjwg-qfpm-7377 and others)
    "PyJWT[crypto]>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    # >=0.0.18 required: CVE-2024-47874 DoS in earlier versions
    "python-multipart>=0.0.18",
    # Utilities
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "orjson>=3.10.0",    # Faster JSON serialization
    # Data providers — ADR-005 approved free sources
    # yfinance: unofficial Yahoo Finance wrapper. Primary equities OHLCV source.
    # No API key required. Risk: unofficial; Yahoo can block. Mitigation: mock_data/ fallback.
    "yfinance>=0.2.40",
    # pandas: required by yfinance (returns DataFrames). Pinned to major version for ABI stability.
    "pandas>=2.2.0",
    # fredapi: official FRED Python client. Macro series (GDP, CPI, rates).
    # Requires free FRED_API_KEY from fred.stlouisfed.org.
    "fredapi>=0.5.2",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    # Linting + formatting
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.9.0",
    # Type stubs
    "types-python-dateutil",
    "types-pytz",
    "types-passlib",
    "sqlalchemy[mypy]",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
# B008: FastAPI uses Query(), Depends(), Body() as parameter defaults by design
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

# clickhouse-connect has no py.typed marker or bundled stubs.
# Tracking issue: https://github.com/ClickHouse/clickhouse-connect/issues/319
[[tool.mypy.overrides]]
module = ["clickhouse_connect", "clickhouse_connect.*"]
ignore_missing_imports = true

# redis-py asyncio helpers (from_url, etc.) are not fully typed.
# The redis package ships partial stubs; from_url is unannotated.
[[tool.mypy.overrides]]
module = ["redis", "redis.*"]
ignore_missing_imports = true

# redis-py's from_url annotation has been inconsistent across Python versions
# (untyped on 3.13, typed on 3.12). Allow untyped calls in the redis client
# factory so the codebase is clean without version-dependent type: ignore comments.
[[tool.mypy.overrides]]
module = ["src.db.redis"]
disallow_untyped_calls = false

# yfinance has no py.typed marker or stubs. Unofficial Yahoo Finance wrapper — ADR-005.
[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true

# pandas ships its own stubs but the integration surface we use (DataFrame → dict)
# is well-typed. ignore_missing_imports guards against stub version mismatches.
[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

# fredapi has no py.typed marker or stubs. Official FRED client — ADR-005.
[[tool.mypy.overrides]]
module = ["fredapi", "fredapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "alembic/*"]
