[build-system]
# hatchling >= 1.21.0 required for prepare_metadata_for_build_editable support
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicitly declare the package root — hatchling cannot auto-discover a bare src/ layout
packages = ["src"]

[project]
name = "terminal-worker"
version = "0.0.1"
description = "Bloomberg Terminal — Celery worker for background ingestion tasks"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "clickhouse-driver>=0.2.7",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=60"
