[build-system]
# hatchling >= 1.21.0 required for prepare_metadata_for_build_editable support
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicitly declare the package root — hatchling cannot auto-discover a bare src/ layout
packages = ["src"]

[project]
name = "terminal-worker"
version = "0.0.1"
description = "Bloomberg Terminal — Celery worker for background ingestion tasks"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "clickhouse-driver>=0.2.7",
    # HTTP-based async ClickHouse client — required for insert_bars in worker tasks.
    # clickhouse-driver uses native TCP (blocking); clickhouse-connect uses HTTP (async).
    "clickhouse-connect>=0.7.0",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "orjson>=3.10.0",
    # Data providers — ADR-005 approved free sources
    # yfinance: unofficial Yahoo Finance wrapper. Primary equities OHLCV source.
    # No API key required. Risk: unofficial; Yahoo can block. Mitigation: mock_data/ fallback.
    "yfinance>=0.2.40",
    # pandas: required by yfinance (returns DataFrames).
    "pandas>=2.2.0",
    # fredapi: official FRED Python client. Macro series (GDP, CPI, rates).
    # Requires free FRED_API_KEY from fred.stlouisfed.org.
    "fredapi>=0.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
# pydantic.mypy plugin: teaches mypy about BaseSettings env-var injection so
# WorkerSettings() (no args) does not trigger [call-arg] errors.
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# celery does not ship a py.typed marker or type stubs and has no plans to do so.
# ignore_missing_imports suppresses the [import-untyped] error for this package only.
module = ["celery", "celery.*"]
ignore_missing_imports = true

# clickhouse-connect has no py.typed marker or bundled stubs.
# Tracking issue: https://github.com/ClickHouse/clickhouse-connect/issues/319
[[tool.mypy.overrides]]
module = ["clickhouse_connect", "clickhouse_connect.*"]
ignore_missing_imports = true

# redis-py asyncio helpers (from_url, etc.) are not fully typed.
[[tool.mypy.overrides]]
module = ["redis", "redis.*"]
ignore_missing_imports = true

# Celery @app.task decorator is untyped — mypy cannot infer return type of
# decorated functions. disallow_untyped_decorators=false suppresses this for
# the tasks module only, where all Celery task functions live.
[[tool.mypy.overrides]]
module = ["src.tasks.*"]
disallow_untyped_decorators = false

# yfinance has no py.typed marker or stubs. ADR-005.
[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true

# pandas stubs — guard against version mismatches. ADR-005.
[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

# fredapi has no py.typed marker or stubs. ADR-005.
[[tool.mypy.overrides]]
module = ["fredapi", "fredapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Coverage floor reflects current Phase 1 test inventory. Several ingest
# tasks (CoinGecko, yfinance) ship with end-to-end mock_data integration
# tests at the API layer (see services/api/tests) but lack worker-side
# unit tests; those are scheduled with their Phase-2 task hardening pass.
# Raise this floor as additional task tests land — never lower it.
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=50"

[tool.coverage.run]
source = ["src"]
# Phase-deferred stubs documented in their module docstrings — they are
# placeholder Celery tasks that exist only to keep the Beat schedule wired
# up. Their full implementations land in Phase 2 (market_data_ingest,
# news_ingest, edgar_ingest) and Phase 5 (alert_evaluator). Excluded here
# so the floor measures real code, not stubs.
omit = [
    "tests/*",
    "src/tasks/alert_evaluator.py",
    "src/tasks/edgar_ingest.py",
    "src/tasks/market_data_ingest.py",
    "src/tasks/news_ingest.py",
]
